# duckdb-ml

./: .gitignore  COMMUNITY.md  Cargo.toml  Makefile  README.md  build.rs
scripts/: package_extension.py  verify_extension.py
src/: api.rs  automl.rs  deploy.rs  lib.rs  load.rs  snapshot.rs
src/model/: kmeans.rs  knn.rs  lasso.rs  linear.rs  logistic.rs  mlp.rs  mod.rs  naive_bayes.rs  onnx.rs  pca.rs  registry.rs  tree.rs  types.rs  xgboost.rs
src/predict/: batch.rs  mod.rs
src/storage/: mod.rs
src/train/: gbdt.rs  kmeans.rs  lasso.rs  linear.rs  logistic.rs  mlp.rs  mod.rs  table_fn.rs  tree.rs
