[package]
name = "duckdb-ml"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Lightweight, columnar-native, train+inference DuckDB machine learning extension"

[dependencies]
duckdb = { version = "~1.10504.0", features = ["loadable-extension", "vtab-arrow"] }
arrow = "58"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "2"
log = "0.4"
env_logger = "0.11"
thiserror = "2"

# Optional ONNX support
ort = { version = "2.0.0-rc.12", optional = true }
sha2 = "0.11.0"

[features]
default = []
onnx = ["dep:ort"]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
lto = true
